--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  useful_util: 
+    git: https://github.com/MonowarShoz/useful_util.git
+
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
