--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   mask_text_input_formatter: ^2.5.0
+  url_launcher: ^6.1.13
 
 dev_dependencies:
   flutter_test:
